force-app/main/default/objects/Trigger_Action__mdt/fields/Asynchronous__c.field-meta.xml
<CustomField>
    <fullName>Asynchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run this action asynchronously</description>
    <label>Asynchronous</label>
    <type>Checkbox</type>
</CustomField>