force-app/main/default/objects/Trigger_Action__mdt/fields/Bypassed_Methods__c.field-meta.xml
<CustomField>
    <fullName>Bypassed_Methods__c</fullName>
    <description>Semicolon-separated list of method names to skip within this handler</description>
    <label>Bypassed Methods</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>