force-app/main/default/objects/Trigger_Action__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <defaultValue>1.000</defaultValue>
    <description>Order of execution within trigger event (lower runs first)</description>
    <label>Execution Order</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>