force-app/main/default/objects/Trigger_Action__mdt/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>Method to call in the handler class (optional - if blank, calls execute())</description>
    <inlineHelpText>Leave blank to call default execute() method, or specify a method name like &apos;validateAccounts&apos;</inlineHelpText>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>