force-app/main/default/objects/Trigger_Action__mdt/fields/Trigger_Event__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event__c</fullName>
    <description>When to execute this action</description>
    <label>Trigger Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Insert</fullName>
            </value>
            <value>
                <fullName>Before Update</fullName>
            </value>
            <value>
                <fullName>Before Delete</fullName>
            </value>
            <value>
                <fullName>After Insert</fullName>
            </value>
            <value>
                <fullName>After Update</fullName>
            </value>
            <value>
                <fullName>After Delete</fullName>
            </value>
            <value>
                <fullName>After Undelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>