force-app/main/default/objects/Trigger_Action__mdt/fields/Trigger_Handler_Config__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Handler_Config__c</fullName>
    <description>Parent trigger configuration</description>
    <label>Trigger Handler Config</label>
    <referenceTo>Trigger_Handler_Config__mdt</referenceTo>
    <relationshipLabel>Trigger Actions</relationshipLabel>
    <relationshipName>Trigger_Actions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>