force-app/main/default/objects/Trigger_Action__mdt/fields/User_Managed__c.field-meta.xml
<CustomField>
    <fullName>User_Managed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If enabled, errors stop the transaction. If disabled, errors are logged but don&apos;t stop execution.</description>
    <label>User Managed</label>
    <type>Checkbox</type>
</CustomField>