force-app/main/default/objects/Trigger_Action__mdt/fields/Usernames_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Usernames_to_Exclude__c</fullName>
    <description>Semicolon-separated list of usernames that should bypass this action</description>
    <label>Usernames to Exclude</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>