force-app/main/default/objects/Trigger_Action__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Trigger_Event__c</columns>
    <columns>Apex_Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Trigger_Handler_Config__c</columns>
    <columns>Description__c</columns>
    <columns>Asynchronous__c</columns>
    <columns>Bypassed_Methods__c</columns>
    <columns>Execution_Order__c</columns>
    <columns>User_Managed__c</columns>
    <columns>Usernames_to_Exclude__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>